# italian_teacher

./: .gitignore  .pre-commit-config.yaml  MVP_STRATEGY.md  Makefile  NEXT_STEPS_GRPO.md  README.md  RL_EXPLAINED.md  ROADMAP.md  STAGING_ENVIRONMENT.md  TEACHER_SYSTEM_SUMMARY.md  italian-teacher-roadmap.md  logs.txt  model_performance_benchmark.ipynb  package-lock.json  pyproject.toml  requirements.txt  run_api.sh  standalone_training_setup.py  student  teacher  train_grpo.ipynb
cli/: README.md  simple_chat.py
configs/: README.md  development.yaml  system.yaml
configs/agents/: lorenzo.yaml  marco.yaml  nonna_giulia.yaml  professoressa_rossi.yaml
configs/models/: llama3.1-3b.yaml  llama3.1-8b.yaml  llama3.2-3b.yaml  mistral-7b.yaml  mock.yaml
data/: COLAB_Italian_Grammar_Improvement.ipynb  italian_teacher.db
data/archived_raw/: EXTRACTION_SUMMARY.md  Free B1 Intermediate Italian Exercises.html  HOW_TO_EXTRACT.md  Italian Grammar Exercise - Subjunctive Present - Dropdown Exercise - 2.html  Objects in the house – Solution.html  Objects in the house.html  extracted_exercises.json
data/scripts/: README.md  convert_celi_to_training.py  create_complete_dataset.py  create_final_authentic_dataset.py  gpt4o_mini_level_specific_completion.py  process_raw_data_robust.py
data/staging/: scenario_1.json
demos/: API_DEMO_GUIDE.md  colab_inference_api.ipynb  run_api.sh  staging_teacher_flow.py  teacher_interactive_demo.py  teacher_manual_demo.py  test_api_demo.py  test_base_model.ipynb
docs/: CLI_GUIDE.md  COLAB_PRO_SETUP.md  OPEN_SOURCE_MODELS.md  QUICKSTART.md  README.md  agent-development-pipeline.md  core-agent-architecture.md  italian-teacher-roadmap.md  model_v1_analysis.md  testing-architecture.md
docs/archive/: ALTERNATIVE_FINETUNING_METHODS.md  CLEANUP_PLAN.md  COMPREHENSIVE_AUGMENTATION_V4.md  IMPROVEMENTS_V4.md  MUST_TRAIN_NEW_MODEL.md  QUICK_START_V4.md  RUN_V4_COMPREHENSIVE.sh  test_v4_quality.py
docs/data/: dataset-summary.md
docs/development/: COLAB_GPU_INTEGRATION.md  business-plan.md  (+2 more)
examples/: coordinator_demo.py
legacy/: README.md
notebooks/: italian_teacher_demo.ipynb
scripts/: README.md  download_lora_model.py  download_models.py  generate_diagrams.py  setup_dev.py  test_exercise_quality.py
src/: __init__.py
tests/: README.md  conftest.py  test_helpers.py
utils/: __init__.py  exercise_validator.py  model_performance_benchmark.ipynb  parse_logs.py  test_reward_function.py
(+601 files in other folders)
